# canswer

./: .gitignore  Makefile  README.md  canswer.opam  dune-project
lib/: dune  toDot.ml
lib/attackgraph/: attackGraph.ml  attackGraph.mli
lib/core/: dune  fromStringParser.mly  lset.mli
lib/rewrite/: drc.ml  trc.ml
tests/: atomTests.ml  conjunctiveTests.ml  dune  fromStringTests.ml  lsetTests.ml  relationNameTests.ml  substitutionTests.ml  symbolTests.ml  utils.ml
